--- a/css/main.css
+++ b/css/main.css
@@ -42,6 +42,11 @@ body {
   line-height: normal;
   letter-spacing: 0.78px;
 }
+@media screen and (min-width: 768px) {
+  .logo {
+    margin-right: 88px;
+  }
+}
 @media screen and (min-width: 1200px) {
   .logo {
     padding-top: 24px;
@@ -58,18 +63,10 @@ body {
 
 .section {
   padding-top: 60px;
-  padding-bottom: 60px;
-}
-@media screen and (min-width: 768px) {
-  .section {
-    padding-top: 60px;
-    padding-bottom: 60px;
-  }
 }
 @media screen and (min-width: 1200px) {
   .section {
     padding-top: 94px;
-    padding-bottom: 94px;
   }
 }
 
@@ -228,6 +225,11 @@ address {
 
 .socials-box {
   text-align: center;
+}
+@media screen and (max-width: 480px) {
+  .socials-box {
+    margin-top: 60px;
+  }
 }
 @media screen and (min-width: 1200px) {
   .socials-box {
@@ -769,10 +771,21 @@ address {
           transform: translatey(0);
 }
 
+@media screen and (max-width: 1199px) {
+  .subscribe {
+    margin-top: 60px;
+  }
+}
 .subscribe__title {
   margin-top: 0;
   margin-bottom: 20px;
   color: var(--primary-white-color);
+  text-align: center;
+}
+@media screen and (min-width: 1200px) {
+  .subscribe__title {
+    text-align: left;
+  }
 }
 .subscribe__form {
   margin-top: 20px;
@@ -806,10 +819,10 @@ address {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -webkit-box-orient: vertical;
+    -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+        -ms-flex-direction: row;
+            flex-direction: row;
     -webkit-box-align: baseline;
         -ms-flex-align: baseline;
             align-items: baseline;
@@ -976,15 +989,8 @@ address {
     display: -ms-flexbox;
     display: flex;
     gap: 50px;
-    margin-left: 88px;
   }
 }
-@media screen and (min-width: 1200px) {
-  .nav-list {
-    margin-left: 92px;
-  }
-}
-
 .nav__item {
   position: relative;
 }
@@ -1736,7 +1742,6 @@ address {
 .work__link {
   color: var(--main-text-color);
   display: block;
-  width: 370px;
   -webkit-transition: -webkit-box-shadow var(--primary-translate);
   transition: -webkit-box-shadow var(--primary-translate);
   transition: box-shadow var(--primary-translate);
@@ -1767,11 +1772,16 @@ address {
   padding-top: 60px;
   padding-bottom: 60px;
 }
+@media screen and (max-width: 768px) {
+  .footer__logo {
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
 .footer__container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  gap: 60px;
 }
 @media screen and (max-width: 767px) {
   .footer__container {
@@ -1799,6 +1809,15 @@ address {
             align-items: baseline;
   }
 }
+@media screen and (min-width: 1200px) {
+  .footer__container {
+    gap: 60px;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+  }
+}
+
 .footer__box {
   text-align: center;
 }
