--- a/scss/base/_common.scss
+++ b/scss/base/_common.scss
@@ -14,7 +14,8 @@ body {
     letter-spacing: 0.78px;
 
     @media screen and (min-width: 768px) {
-        }
+        margin-right: 88px;
+    }
     
     @media screen and (min-width: 1200px) {
         padding-top: 24px;
@@ -35,16 +36,10 @@ body {
 
 .section {
     padding-top: 60px;
-    padding-bottom: 60px;
     
-    @include mq(tablet) {
-        padding-top: 60px;
-        padding-bottom: 60px;
-    }
     
     @include mq(desktop) {
         padding-top: 94px;
-        padding-bottom: 94px;
     }
 }
 
