--- a/scss/components/_subscribe-form.scss
+++ b/scss/components/_subscribe-form.scss
@@ -1,9 +1,18 @@
 .subscribe {
 
+    @media screen and (max-width: 1199px) {
+        margin-top: 60px;        
+    }
+
     &__title {
         margin-top: 0;
         margin-bottom: 20px;
         color: var(--primary-white-color);
+        text-align: center;
+
+        @media screen and (min-width: 1200px) {
+            text-align: left;
+        }
     }
     
     &__form {
@@ -23,7 +32,7 @@
 
     @media screen and (min-width: 1200px) {
         display: flex;
-        flex-direction: column;
+        flex-direction: row;
         align-items: baseline;
         justify-content: flex-end;
     }
