--- a/scss/layouts/_footer.scss
+++ b/scss/layouts/_footer.scss
@@ -3,10 +3,18 @@
     padding-top: 60px;
     padding-bottom: 60px;
 
+    &__logo {
+        @media screen and (max-width: 768px) {
+            margin-left: auto;
+            margin-right: auto;   
+        }
+
+    }
+
+
     &__container {
         display: flex;
-        gap: 60px;
-        
+         
             @media screen and (max-width: 767px) {
                 flex-direction: column;
                 align-items: center;
@@ -20,7 +28,8 @@
             }
         
             @media screen and (min-width: 1200px) {
-
+                gap: 60px;
+                justify-content: flex-start;
             }
     }
 }
