--- a/css/main.css
+++ b/css/main.css
@@ -298,10 +298,16 @@ address {
 }
 
 .modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
   padding: 40px;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
   background-color: var(--primary-white-color);
+  width: 450px;
+  -webkit-box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
+          box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
   border-radius: 4px;
   -webkit-transition: opacity 300ms ease-in-out, -webkit-transform 300ms ease-in-out;
   transition: opacity 300ms ease-in-out, -webkit-transform 300ms ease-in-out;
@@ -310,21 +316,13 @@ address {
   /* початковій стан елемента перед анімацією */
   /* кінцевий стан елемента після анімації */
 }
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 479px) {
   .modal {
-    width: 450px;
-    height: 609px;
-    margin-left: auto;
-    margin-right: auto;
+    width: 100%;
   }
 }
 @media screen and (min-width: 1200px) {
   .modal {
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    -webkit-transform: translate(-50%, -50%);
-            transform: translate(-50%, -50%);
     width: 528px;
     height: 581px;
   }
@@ -455,7 +453,9 @@ address {
 
 .label {
   margin-bottom: 4px;
-  display: block;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   font-size: 12px;
 }
 
