--- a/scss/components/_modal-form.scss
+++ b/scss/components/_modal-form.scss
@@ -34,27 +34,27 @@
 }
 
 .modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
     padding: 40px;
     transform: translate(-50%, -50%);
     background-color: var(--primary-white-color);
+    width: 450px;
 
-@media screen and (min-width: 480px) {
-        width: 450px;
-        height: 609px;
-        margin-left: auto;
-        margin-right: auto;
+
+@media screen and (min-width: 479px) {
+        width: 100%;
     }
 
     @media screen and (min-width: 1200px) {
-        position: absolute;
-        left: 50%;
-        top: 50%;
-        transform: translate(-50%, -50%);
         width: 528px;
         height: 581px;
     }
 
-  
+    box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2),
+          0px 1px 1px 0px rgba(0, 0, 0, 0.14),
+          0px 1px 3px 0px rgba(0, 0, 0, 0.12);
     border-radius: 4px;
 
     transition: transform 300ms ease-in-out, opacity 300ms ease-in-out;
@@ -175,7 +175,7 @@
 
 .label {
     margin-bottom: 4px;
-    display: block;
+    display: flex;
     font-size: 12px;
 }
 
