--- a/css/main.css
+++ b/css/main.css
@@ -306,6 +306,8 @@ address {
           transform: translate(-50%, -50%);
   background-color: var(--primary-white-color);
   width: 450px;
+  margin-left: 15px;
+  margin-right: 15px;
   -webkit-box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
           box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
   border-radius: 4px;
