--- a/scss/components/_modal-form.scss
+++ b/scss/components/_modal-form.scss
@@ -46,7 +46,7 @@
 
 
 @media screen and (min-width: 479px) {
-        width: 100%;
+        // width: 100%;
     }
 
     @media screen and (min-width: 1200px) {
