--- a/css/main.css
+++ b/css/main.css
@@ -306,8 +306,6 @@ address {
           transform: translate(-50%, -50%);
   background-color: var(--primary-white-color);
   width: 450px;
-  margin-left: 15px;
-  margin-right: 15px;
   -webkit-box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
           box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
   border-radius: 4px;
@@ -317,6 +315,11 @@ address {
   transition: transform 300ms ease-in-out, opacity 300ms ease-in-out, -webkit-transform 300ms ease-in-out;
   /* початковій стан елемента перед анімацією */
   /* кінцевий стан елемента після анімації */
+}
+@media screen and (max-width: 479px) {
+  .modal {
+    width: 100%;
+  }
 }
 @media screen and (min-width: 1200px) {
   .modal {
