--- a/scss/components/_modal-form.scss
+++ b/scss/components/_modal-form.scss
@@ -41,12 +41,11 @@
     transform: translate(-50%, -50%);
     background-color: var(--primary-white-color);
     width: 450px;
-    margin-left: 15px;
-    margin-right: 15px;
 
 
-@media screen and (min-width: 479px) {
-        // width: 100%;
+
+@media screen and (max-width: 479px) {
+        width: 100%;
     }
 
     @media screen and (min-width: 1200px) {
