--- a/scss/base/_container.scss
+++ b/scss/base/_container.scss
@@ -1,4 +1,5 @@
 .container {
+    width: 100%;
     margin: 0;
     margin-left: auto;
     margin-right: auto;
@@ -6,16 +7,15 @@
     padding-right: 15px;
 
 
-    @include mq(mobile) {
-    width: 480px;
+@media screen and (min-width: 480px) {
+        width: 480px;
     }
 
-    @include mq(tablet) {
-    width: 768px;
+    @media screen and (min-width: 768px) {
+        width: 768px;
     }
 
-    @include mq(desktop) {
-    width: 1200px;
-
+    @media screen and (min-width: 1200px) {
+        width: 1200px;
     }
 }
