--- a/scss/layouts/_portfolio.scss
+++ b/scss/layouts/_portfolio.scss
@@ -16,7 +16,7 @@
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: 440px;
     gap: 30px;
-    
+
     }
 
     @include mq(desktop) {
@@ -27,16 +27,13 @@
     
     }
 
-    &__item:not(:last-child) {
-        margin-bottom: 30px;
-    }
-
     &__name {
         border-left: 1px solid #EEE;
         border-bottom: 1px solid #EEE;
         border-right: 1px solid #EEE;
         background: var(--primary-white-color);
         padding: 20px 24px;
+        flex-grow: 1;
     }
 
     &__title {
@@ -51,9 +48,27 @@
 
 }
 
+.work__item {
+    width: 100%;
+    height: 100%;
+
+    @media screen and (max-width: 767px) {
+        &:not(:last-child) {
+            margin-bottom: 30px;
+        }
+
+        &:last-child {
+            margin-bottom: 60px;
+        }
+    }
+
+}
+
+
 .work__link {
     color: var(--main-text-color);
-    display: block;
+    display: flex;
+    flex-direction: column;
     transition: box-shadow var(--primary-translate);
     transform: translatey(0);
 
