--- a/css/main.css
+++ b/css/main.css
@@ -1432,16 +1432,14 @@ address {
   }
 }
 
-@media screen and (min-width: 480px) {
-  .peculiarities__item {
-    width: 450px;
-  }
-  .peculiarities__item:not(:last-child) {
-    margin-bottom: 30px;
-  }
-  .peculiarities__item:last-child {
-    margin-bottom: 60px;
-  }
+.peculiarities__item {
+  width: 450px;
+}
+.peculiarities__item:not(:last-child) {
+  margin-bottom: 30px;
+}
+.peculiarities__item:last-child {
+  margin-bottom: 60px;
 }
 @media screen and (min-width: 768px) {
   .peculiarities__item {
@@ -1550,12 +1548,6 @@ address {
   padding-bottom: 60px;
   background-color: #F5F4FA;
 }
-@media screen and (min-width: 1200px) {
-  .team {
-    padding-top: 94px;
-    padding-bottom: 94px;
-  }
-}
 .team__title {
   margin-bottom: 30px;
 }
@@ -1565,7 +1557,22 @@ address {
           box-shadow: var(--team-card-shadow);
   border-radius: 4px;
   overflow: hidden;
-  margin-bottom: 30px;
+}
+@media screen and (max-width: 1199px) and (min-width: 768px) {
+  .team__item:nth-child(-n+2) {
+    margin-bottom: 30px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .team__item:not(:last-child) {
+    margin-bottom: 30px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .team {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 @media screen and (min-width: 768px) {
   .team__item {
@@ -1711,6 +1718,7 @@ address {
 
 .work {
   display: block;
+  margin-bottom: 60px;
 }
 @media screen and (min-width: 768px) {
   .work {
@@ -1726,6 +1734,7 @@ address {
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: 440px;
     gap: 30px;
+    margin-bottom: 94px;
   }
 }
 .work__name {
@@ -1750,6 +1759,9 @@ address {
 .work__item {
   width: 100%;
   height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 @media screen and (max-width: 767px) {
   .work__item:not(:last-child) {
@@ -1775,6 +1787,9 @@ address {
   transition: box-shadow var(--primary-translate), -webkit-box-shadow var(--primary-translate);
   -webkit-transform: translatey(0);
           transform: translatey(0);
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
 }
 .work__link:hover, .work__link:focus {
   -webkit-box-shadow: 1px 4px 6px 0px rgba(0, 0, 0, 0.16), 0px 4px 4px 0px rgba(0, 0, 0, 0.06), 0px 1px 1px 0px rgba(0, 0, 0, 0.12);
@@ -1838,10 +1853,9 @@ address {
 }
 @media screen and (min-width: 1200px) {
   .footer__container {
-    gap: 60px;
-    -webkit-box-pack: start;
-        -ms-flex-pack: start;
-            justify-content: flex-start;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
   }
 }
 
