--- a/scss/layouts/_footer.scss
+++ b/scss/layouts/_footer.scss
@@ -28,8 +28,7 @@
             }
         
             @media screen and (min-width: 1200px) {
-                gap: 60px;
-                justify-content: flex-start;
+                justify-content: space-between;
             }
     }
 }
