--- a/scss/layouts/_portfolio.scss
+++ b/scss/layouts/_portfolio.scss
@@ -10,6 +10,7 @@
 
 .work {
     display: block; 
+    margin-bottom: 60px;   
 
     @include mq(tablet) {   
     display: grid;
@@ -24,7 +25,7 @@
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: 440px;
     gap: 30px;
-    
+    margin-bottom: 94px ;
     }
 
     &__name {
@@ -51,7 +52,7 @@
 .work__item {
     width: 100%;
     height: 100%;
-
+    display: flex;
     @media screen and (max-width: 767px) {
         &:not(:last-child) {
             margin-bottom: 30px;
@@ -71,6 +72,7 @@
     flex-direction: column;
     transition: box-shadow var(--primary-translate);
     transform: translatey(0);
+    flex-grow: 1;
 
     &:hover,
     &:focus {
