--- a/scss/layouts/_clients.scss
+++ b/scss/layouts/_clients.scss
@@ -10,17 +10,37 @@
 }
 
 .clients-list {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
+    display: grid;
     gap: 30px;
     margin-top: 30px;
 
+    @media screen and (max-width: 479px) {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+    }
+
+    @media screen and (max-width: 767px) {
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(3, 1fr);
+    }
+
+    @media screen and (min-width: 768px) and (max-width: 1199px) {
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: repeat(2, 1fr);
+    }
+
+
     @include mq (desktop) {
+        display: flex;
         margin-top: 50px;
+        flex-wrap: nowrap;
+        justify-content: space-between;
+        align-items: center;
     }
 }
+
 
 .clients__link {
     display: flex;
