--- a/scss/layouts/_hero.scss
+++ b/scss/layouts/_hero.scss
@@ -75,6 +75,11 @@
     margin-left: auto;
     margin-right: auto;
 
+    @media screen and (max-width: 479px) {
+        max-width: 230px;
+        font-size: 18px;
+
+    }
 
     @include mq (desktop) {
     font-size: 44px;
