--- a/css/main.css
+++ b/css/main.css
@@ -320,10 +320,10 @@ address {
 }
 @media screen and (max-width: 479px) {
   .modal {
-    width: 100%;
+    width: 90%;
   }
 }
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1199px) {
   .modal {
     width: 528px;
     height: 581px;
@@ -388,6 +388,11 @@ address {
   margin: 0;
   padding: 0;
   margin-bottom: 12px;
+}
+@media screen and (max-width: 479px) {
+  .modal__text {
+    font-size: 18px;
+  }
 }
 .modal__label {
   position: relative;
@@ -554,6 +559,11 @@ address {
   transition: border-color var(--primary-translate);
   outline: none;
 }
+@media screen and (max-width: 479px) {
+  .comment__text {
+    height: 70px;
+  }
+}
 @media screen and (min-width: 480px) {
   .comment__text {
     width: 370px;
@@ -589,6 +599,16 @@ address {
   -webkit-transition-property: color var(--primary-translate);
   transition-property: color var(--primary-translate);
 }
+@media screen and (max-width: 479px) {
+  .agree__link {
+    font-size: 12px;
+  }
+}
+@media screen and (max-width: 479px) {
+  .agree {
+    font-size: 12px;
+  }
+}
 
 .modal__checkbox {
   display: -webkit-box;
@@ -608,6 +628,7 @@ address {
   .modal__checkbox {
     font-size: 14px;
     line-height: 1.71;
+    margin: 16px 0 18px 0;
   }
 }
 
@@ -677,6 +698,12 @@ address {
   cursor: pointer;
   -webkit-transition: background-color var(--primary-translate);
   transition: background-color var(--primary-translate);
+}
+@media screen and (max-width: 479px) {
+  .submit-btn {
+    padding: 8px 44px;
+    font-size: 12px;
+  }
 }
 .submit-btn:hover, .submit-btn:active, .submit-btn:focus {
   background-color: #188CE8;
